# patterns

./: .gitignore  pyproject.toml
tests/: test_patterns.py
