[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["James Gloudemans <james.gloudemans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
mypy = "^0.790"
flake8 = "^3.8.4"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
